--- a/SimulatorOfTheFittest/SimulatorOfTheFittest/SimulatorOfTheFittest.vcxproj
+++ b/SimulatorOfTheFittest/SimulatorOfTheFittest/SimulatorOfTheFittest.vcxproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="Animal.h" />
+    <ClInclude Include="Area.h" />
     <ClInclude Include="Carnivore.h" />
     <ClInclude Include="Herbivore.h" />
     <ClInclude Include="Plant.h" />
