--- a/SimulatorOfTheFittest/SimulatorOfTheFittest/SimulatorOfTheFittest.vcxproj
+++ b/SimulatorOfTheFittest/SimulatorOfTheFittest/SimulatorOfTheFittest.vcxproj
@@ -78,6 +78,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Area.cpp" />
     <ClCompile Include="Carnivore.cpp" />
     <ClCompile Include="Herbivore.cpp" />
     <ClCompile Include="Plant.cpp" />
