--- a/SimulatorOfTheFittest/SimulatorOfTheFittest/SimulatorOfTheFittest.vcxproj
+++ b/SimulatorOfTheFittest/SimulatorOfTheFittest/SimulatorOfTheFittest.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="Carnivore.cpp" />
     <ClCompile Include="Herbivore.cpp" />
     <ClCompile Include="Plant.cpp" />
+    <ClCompile Include="Simulation.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
