--- a/SimulatorOfTheFittest/SimulatorOfTheFittest/SimulatorOfTheFittest.vcxproj.filters
+++ b/SimulatorOfTheFittest/SimulatorOfTheFittest/SimulatorOfTheFittest.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Herbivore.cpp">
       <Filter>Source Files\Actors</Filter>
     </ClCompile>
+    <ClCompile Include="Simulation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Plant.h">
