--- a/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux/Makefile
+++ b/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux/Makefile
@@ -35,7 +35,7 @@ error:
 	$(error Invalid configuration, please check your inputs)
 endif
 
-SOURCEFILES := Area.cpp Carnivore.cpp Herbivore.cpp Plant.cpp Source.cpp
+SOURCEFILES := Area.cpp Carnivore.cpp Herbivore.cpp Plant.cpp Simulation.cpp Source.cpp
 EXTERNAL_LIBS := 
 EXTERNAL_LIBS_COPIED := $(foreach lib, $(EXTERNAL_LIBS),$(BINARYDIR)/$(notdir $(lib)))
 
