--- a/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux.vcxproj.filters
+++ b/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux.vcxproj.filters
@@ -75,5 +75,8 @@
     <ClInclude Include="ActorTypeList.h">
       <Filter>Header files</Filter>
     </ClInclude>
+    <ClInclude Include="SharedHelperFunctions.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
