--- a/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux.vcxproj.filters
+++ b/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClCompile Include="Simulation.cpp">
       <Filter>Source files</Filter>
     </ClCompile>
+    <ClCompile Include="Log.cpp">
+      <Filter>Source files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile" />
@@ -73,6 +76,9 @@
       <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="ActorTypeList.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="Log.h">
       <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
