--- a/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux.vcxproj
+++ b/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux.vcxproj
@@ -43,10 +43,9 @@
     <NMakeCleanCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /clean "$(ProjectPath)" "/solution:$(SolutionPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeCleanCommandLine>
     <NMakeReBuildCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /rebuild "$(ProjectPath)" "/solution:$(SolutionPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeReBuildCommandLine>
     <NMakeOutput>$(ProjectDir)SimulatorOfTheFittest-Linux-Debug.vgdbsettings</NMakeOutput>
-    <IncludePath>C:\Program Files\boost\boost_1_55_0, C:\Program Files (x86)\Microsoft Visual Studio 12.0\boost; C:\Program Files (x86)\Microsoft Visual Studio 12.0\boost;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSdkDir)include;$(FrameworkSDKDir)\include;</IncludePath>
-    <ReferencePath>
-    </ReferencePath>
-    <LibraryPath />
+    <IncludePath>C:\Program Files\boost\boost_1_55_0;C:\Program Files (x86)\Microsoft Visual Studio 12.0\boost;$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Program Files\boost\boost_1_58_0</IncludePath>
+    <ReferencePath>$(VC_ReferencesPath_x86);</ReferencePath>
+    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
     <NMakePreprocessorDefinitions>__VisualGDB_CFG_Debug;$(NMakePreprocessorDefinitions)</NMakePreprocessorDefinitions>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -68,6 +67,7 @@
     <ClCompile Include="Area.cpp" />
     <ClCompile Include="Carnivore.cpp" />
     <ClCompile Include="Herbivore.cpp" />
+    <ClCompile Include="Log.cpp" />
     <ClCompile Include="Plant.cpp" />
     <ClCompile Include="Simulation.cpp" />
     <ClCompile Include="Source.cpp" />
@@ -85,6 +85,7 @@
     <ClInclude Include="Area.h" />
     <ClInclude Include="Carnivore.h" />
     <ClInclude Include="Herbivore.h" />
+    <ClInclude Include="Log.h" />
     <ClInclude Include="Plant.h" />
     <ClInclude Include="SharedHelperFunctions.h" />
     <ClInclude Include="WorldMap.h" />
