--- a/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux.vcxproj.filters
+++ b/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux/SimulatorOfTheFittest-Linux.vcxproj.filters
@@ -1,93 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source files">
-      <UniqueIdentifier>{6ab6ea02-b9f3-426c-a46c-66690752254d}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header files">
-      <UniqueIdentifier>{c662d633-7386-4618-ad7c-9d7439125cd9}</UniqueIdentifier>
-      <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource files">
-      <UniqueIdentifier>{a928cd5a-b51d-4a51-9bd3-8bf5c18ab9f6}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
-    </Filter>
-    <Filter Include="Make files">
-      <UniqueIdentifier>{2f702af8-932f-4ea6-9d66-6be189cf718e}</UniqueIdentifier>
-      <Extensions>*.mak</Extensions>
-    </Filter>
+    <ClCompile Include="Area.cpp" />
+    <ClCompile Include="Carnivore.cpp" />
+    <ClCompile Include="Herbivore.cpp" />
+    <ClCompile Include="Plant.cpp" />
+    <ClCompile Include="Simulation.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Plant.cpp">
-      <Filter>Source files</Filter>
-    </ClCompile>
-    <ClCompile Include="Carnivore.cpp">
-      <Filter>Source files</Filter>
-    </ClCompile>
-    <ClCompile Include="Herbivore.cpp">
-      <Filter>Source files</Filter>
-    </ClCompile>
-    <ClCompile Include="Area.cpp">
-      <Filter>Source files</Filter>
-    </ClCompile>
-    <ClCompile Include="Source.cpp">
-      <Filter>Source files</Filter>
-    </ClCompile>
-    <ClCompile Include="Simulation.cpp">
-      <Filter>Source files</Filter>
-    </ClCompile>
-    <ClCompile Include="Log.cpp">
-      <Filter>Source files</Filter>
-    </ClCompile>
+    <ClInclude Include="Actor.h" />
+    <ClInclude Include="Animal.h" />
+    <ClInclude Include="Area.h" />
+    <ClInclude Include="Carnivore.h" />
+    <ClInclude Include="Herbivore.h" />
+    <ClInclude Include="Plant.h" />
+    <ClInclude Include="SharedHelperFunctions.h" />
+    <ClInclude Include="WorldMap.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="debug.mak" />
     <None Include="Makefile" />
-    <None Include="debug.mak">
-      <Filter>Make files</Filter>
-    </None>
-    <None Include="release.mak">
-      <Filter>Make files</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Actor.h">
-      <Filter>Header files</Filter>
-    </ClInclude>
-    <ClInclude Include="Plant.h">
-      <Filter>Header files</Filter>
-    </ClInclude>
-    <ClInclude Include="Animal.h">
-      <Filter>Header files</Filter>
-    </ClInclude>
-    <ClInclude Include="Carnivore.h">
-      <Filter>Header files</Filter>
-    </ClInclude>
-    <ClInclude Include="Herbivore.h">
-      <Filter>Header files</Filter>
-    </ClInclude>
-    <ClInclude Include="ActorList.h">
-      <Filter>Header files</Filter>
-    </ClInclude>
-    <ClInclude Include="Area.h">
-      <Filter>Header files</Filter>
-    </ClInclude>
-    <ClInclude Include="WorldMap.h">
-      <Filter>Header files</Filter>
-    </ClInclude>
-    <ClInclude Include="ActorTypeList.h">
-      <Filter>Header files</Filter>
-    </ClInclude>
-<<<<<<< HEAD
-<<<<<<< 0b071b1a946db9f2b2f00224cb0501d39077935c
-    <ClInclude Include="SharedHelperFunctions.h">
-=======
-    <ClInclude Include="Log.h">
->>>>>>> testin stuff
-=======
-    <ClInclude Include="Log.h">
->>>>>>> 2cf2e141794e9d59d911cae2658cf6246c2c3629
-      <Filter>Header files</Filter>
-    </ClInclude>
+    <None Include="release.mak" />
   </ItemGroup>
 </Project>
